refactor: polish validation flow and error handling